# tiny_tiff

./: .gitignore  Cargo.toml  MIT_LICENSE  README.md  build.rs
src/: lib.rs  main.rs  reader.rs  writer.rs
tests/: integration_tests.rs
